Process three letter codes; based on Kurt's contribution
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1292 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,7 @@
+2014-01-28  Ingo Feinerer <feinerer@logic.at>
+
+	* R/utils.R (map_IETF_Snowball): Process three letter codes.
+
 2014-01-07  Ingo Feinerer <feinerer@logic.at>
 
 	* DESCRIPTION (Version): Prepare for CRAN New Year release.
