Avoid spurious duplicate results
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1294 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,8 @@
+2014-02-23  Ingo Feinerer <feinerer@logic.at>
+
+	* R/complete.R (stemCompletion.PlainTextDocument): Avoid spurious
+	duplicate results. Reported by Seong-Hyeon Kim.
+
 2014-01-28  Ingo Feinerer <feinerer@logic.at>
 
 	* R/utils.R (map_IETF_Snowball): Process three letter codes.
