--- a/pkg/vignettes/tm.Rnw
+++ b/pkg/vignettes/tm.Rnw
@@ -109,7 +109,7 @@ later use:
 <<Reuters,keep.source=TRUE>>=
 reut21578 <- system.file("texts", "crude", package = "tm")
 reuters <- Corpus(DirSource(reut21578),
-                  readerControl = list(reader = readReut21578XML))
+                  readerControl = list(reader = readReut21578XMLasPlain))
 @
 
 \section*{Data Export}
@@ -147,19 +147,6 @@ function which applies (maps) a function to all elements of the
 corpus. Basically, all transformations work on single text documents
 and \code{tm\_map()} just applies them to all documents in a corpus.
 
-\subsection*{Converting to Plain Text Documents}
-The corpus \code{reuters} contains documents
-in \acronym{XML} format. We have no further use for the \acronym{XML}
-interna and just want to work with the text content. This can be done
-by converting the documents to plain text documents. It is done by the
-generic \code{as.PlainTextDocument()}.
-<<>>=
-reuters <- tm_map(reuters, as.PlainTextDocument)
-@
-Note that alternatively we could have read in the files with the
-\code{readReut21578XMLasPlain} reader which already returns a plain
-text document in the first place.
-
 \subsection*{Eliminating Extra Whitespace}
 Extra whitespace is eliminated by:
 <<>>=
@@ -169,7 +156,7 @@ reuters <- tm_map(reuters, stripWhitespace)
 \subsection*{Convert to Lower Case}
 Conversion to lower case by:
 <<>>=
-reuters <- tm_map(reuters, tolower)
+reuters <- tm_map(reuters, genMap(tolower))
 @
 As you see you can use arbitrary text processing functions as
 transformations as long the function returns a text document. Most
@@ -203,7 +190,7 @@ and the string ``\code{INDONESIA SEEN AT CROSSROADS OVER ECONOMIC CHANGE}'' as
 their heading (both are meta data attributes of the text document).
 <<>>=
 query <- "id == '237' & heading == 'INDONESIA SEEN AT CROSSROADS OVER ECONOMIC CHANGE'"
-tm_filter(reuters, FUN = sFilter, query)
+#tm_filter(reuters, FUN = sFilter, query)
 @
 
 \section*{Meta Data Management}
@@ -220,8 +207,8 @@ document. Alternatively to \code{meta()} the function
 meta data and \pkg{tm} meta data structures and can be similarly used
 to get and set meta data information for text documents, e.g.:
 <<DublinCore>>=
-DublinCore(crude[[1]], "Creator") <- "Ano Nymous"
-meta(crude[[1]])
+#DublinCore(crude[[1]], "Creator") <- "Ano Nymous"
+#meta(crude[[1]])
 @
 
 For corpora the story is a bit more difficult. Corpora in \pkg{tm}
