--- a/pkg/vignettes/extensions.Rnw
+++ b/pkg/vignettes/extensions.Rnw
@@ -21,50 +21,33 @@ library("XML")
 \maketitle
 
 \section*{Introduction}
-
 The possibility to handle custom file formats is a substantial feature in any
 modern text mining infrastructure. \pkg{tm} has been designed aware of this
-aspect from the beginning on, and has modular components which allow
+aspect from the beginning on, and has modular components which allow for
 extensions. A general explanation of \pkg{tm}'s extension mechanism is
 described by~\citet[Sec.~3.3]{Feinerer_etal_2008}, with an updated description
 as follows.
 
 \section*{Sources}
 A source abstracts input locations and provides uniform methods for access.
-Internally a source is represented as a \code{list} with the class attribute
-\code{Source} and has the following components:
-\begin{description}
-\item[DefaultReader] a reader function suitable for processing the elements
-  delivered by the source,
-\item[Encoding] a character specifying the encoding of the elements
-  delivered by the source,
-\item[Length] a numeric denoting the number of elements delivered by the source
-  (set to \code{NA} if unknown),
-\item[Names] a character vector giving element names,
-\item[Position] a numeric indicating the position in the source, and
-\item[Vectorized] a logical indicating the ability for parallel element access.
-\end{description}
-Custom sources are required to inherit from this virtual base class
-\code{Source} and typically extend this internal list structure with additional
-named components necessary for representing and storing information for
-document access. The function \code{Source()} is a constructor with the
-signature
-\code{Source(defaultReader, encoding, length, names, position, vectorized, class)}
-and should be used when creating custom sources as it populates the
-corresponding list components and ensures the correct base class.
-
 Each source must provide implementations for following interface functions:
 \begin{description}
 \item[eoi()] returns \code{TRUE} if the end of input of the source is reached,
 \item[getElem()] fetches the element at the current position,
-\item[pGetElem()] if \code{Vectorized} is set, retrieves all elements in
-  parallel at once, and
+\item[length()] gives the number of elements,
+\item[names()] gives names for the elements,
+\item[reader()] returns a default reader for processing elements,
+\item[pGetElem()] (optional) retrieves all elements in parallel at once, and
 \item[stepNext()] increases the position in the source to the next element.
 \end{description}
 Retrieved elements must be encapsulated in a list with the named components
 \code{content} holding the document and \code{uri} pointing to the origin of
-the document (e.g., a file path or a connection; \code{NA} if not applicable or
+the document (e.g., a file path or a \acronym{URL}; \code{NA} if not applicable or
 unavailable).
+
+Custom sources are required to inherit from the virtual base class
+\code{Source} and typically do so by extending the functionality provided by the
+simple reference implementation \code{SimpleSource}.
 
 E.g., a simple source which accepts an \proglang{R} vector as input could be
 defined as
@@ -73,13 +56,13 @@ VecSource <- function(x)
     SimpleSource(length = length(x), names = names(x), content = as.character(x),
                  class = "VecSource")
 @
-which overrides a few defaults (see \code{?Source} for defaults) and stores the
-vector in the \code{Content} list component. The functions \code{stepNext()} and
-\code{eoi()} have reasonable default methods already for the \code{Source}
-base class (basically just incrementing the \code{Position} component and
-comparing the current position with the number of available elements as claimed
-by \code{Length}, respectively), so we only need custom methods for element
-access:
+which overrides a few defaults (see \code{?SimpleSource} for defaults) and
+stores the vector in the \code{content} component. The functions
+\code{stepNext()} and \code{eoi()} have reasonable default methods already for
+the \code{SimpleSource} class (basically just incrementing a position counter
+and comparing the current position with the number of available elements as
+claimed by \code{length()}, respectively), so we only need custom methods for
+element access:
 <<keep.source=TRUE>>=
 getElem.VecSource <-
 function(x) list(content = x$content[x$position], uri = NULL)
@@ -88,25 +71,28 @@ function(x) lapply(x$content, function(y) list(content = y, uri = NULL))
 @
 
 \section*{Readers}
-Readers are functions for extracting textual content and meta data out of
+Readers are functions for extracting textual content and metadata out of
 elements delivered by a source and for constructing a text document. Each reader
 must accept following arguments in its signature:
 \begin{description}
 \item[elem] a list with the named components \code{content} and \code{uri} (as
   delivered by a source via \code{getElem()} or \code{pGetElem()}),
-\item[language] a string giving the text's language, and
-\item[id] a unique identification string for the returned text document.
+\item[language] a string giving the language, and
+\item[id] a character giving a unique identifier for the created text document.
 \end{description}
-The element is typically provided by a source whereas the language and the
-identifier are normally provided by a corpus constructor (for the case that
-\code{elem\$content} does not give information on these two essential items).
+The element \code{elem} is typically provided by a source whereas the language
+and the identifier are normally provided by a corpus constructor (for the case
+that \code{elem\$content} does not give information on these two essential
+items).
+
 In case a reader expects configuration arguments we can use a function
-generator (see \code{?FunctionGenerator} for details). It allows us to process
+generator. A function generator is indicated by inherting from class
+\code{FunctionGenerator} and \code{function}. It allows us to process
 additional arguments, store them in an environment, return a reader function
-with the well-defined signature described above, and still able to access the
-additional arguments via lexical scoping. The corpus constructor \code{VCorpus()}
-will check the function for being a function generator and if so apply it to
-yield the reader with the expected signature.
+with the well-defined signature described above, and still be able to access
+the additional arguments via lexical scoping. All corpus constructors in
+package \pkg{tm} check the reader function for being a function generator and
+if so apply it to yield the reader with the expected signature.
 
 E.g., the reader function \code{readPlain()} is defined as
 <<keep.source=TRUE>>=
@@ -148,18 +134,10 @@ df <- data.frame(contents = c("content 1", "content 2", "content 3"),
 @
 We want to map \code{contents}, \code{title}, \code{authors}, and
 \code{topics} to the relevant entries of a text
-document. \code{readTabular()} always returns a
-\code{PlainTextDocument}, so possible attributes are:
-<<>>=
-names(attributes(PlainTextDocument()))
-@
-Except \code{class} which contains inheritance information and which
-should not be modified, all other attributes can be used to access and
-set predefined meta data information for a text document. Additional
-user-defined meta data values can be stored via
-\code{LocalMetaData}. An entry \code{Content} in the mapping will be
-matched to fill the actual content of the text document.
+document.
 
+An entry \code{content} in the mapping will be matched to fill the actual
+content of the text document, all other fields will be used as metadata tags.
 So for our data frame we define a possible mapping as follows:
 <<Mapping,keep.source=TRUE>>=
 m <- list(content = "contents", heading = "title",
@@ -211,14 +189,14 @@ construct a (subclass of a) \code{TextDocument} from it.
 The \code{XMLSource()} function can now be used to construct a custom
 \acronym{XML} source. It has three arguments:
 \begin{description}
-\item[x] either a character identifying a file or a connection,
+\item[x] a character giving a uniform resource identifier,
 \item[parser] a function accepting an \acronym{XML} tree (as delivered by
   \code{xmlTreeParse()} in package \pkg{XML}) as input and returning a
   list of \acronym{XML} elements (each list element will then be delivered to
   the reader as such a self-contained block),
 \item[reader] a reader function capable of turning \acronym{XML}
   elements as returned by the parser into a subclass of
-  \code{TextDocument},
+  \code{TextDocument}.
 \end{description}
 E.g., a custom source which can cope with our custom \acronym{XML}
 format could be:
@@ -253,20 +231,15 @@ myXMLReader <- readXML(
     doc = PlainTextDocument())
 @
 
-Formally, \code{readXML()} is the relevant function which constructs
-an reader. The customization is done via the first argument
-\code{spec}, the second provides an empty instance of the document
-which should be returned (of course augmented with the extracted
-information out of the \acronym{XML} chunks). The specification must
-consist of a named list of lists each containing two character
-vectors. The constructed reader will map each list entry to the
-content or a meta datum of the text document as specified by the named
-list entry. Valid names include \code{Content} to access the
-document's content, any valid attribute name (\code{Author},
-\code{DateTimeStamp}, \code{Description}, \code{Heading}, \code{ID},
-and \code{Origin} in above example specification), and characters
-(\code{Type} in above specification) which are mapped to so-called
-\code{LocalMetaData} entries.
+Formally, \code{readXML()} is the relevant function which constructs an reader.
+The customization is done via the first argument \code{spec}, the second
+provides an empty instance of the document which should be returned (augmented
+with the extracted information out of the \acronym{XML} chunks). The
+specification must consist of a named list of lists each containing two
+character vectors. The constructed reader will map each list entry to the
+content or a metadatum of the text document as specified by the named list
+entry. Valid names include \code{content} to access the document's content, and
+character strings which are mapped to metadata entries.
 
 Each list entry must consist of two character vectors: the first
 describes the type of the second argument, and the second is the
@@ -274,21 +247,21 @@ specification entry. Valid combinations are:
 \begin{description}
 \item[\code{type = "node", spec = "XPathExpression"}] the XPath expression
   \code{spec} extracts information out of an \acronym{XML} node (as seen for
-  \code{Author}, \code{Content}, \code{Heading}, and \code{Type} in our
+  \code{author}, \code{content}, \code{heading}, and \code{type} in our
   example specification).
 \item[\code{type = "attribute", spec = "XPathExpression"}] the XPath
   expression \code{spec} extracts information from an attribute
-  of an \acronym{XML} node (like \code{Description} in our example).
+  of an \acronym{XML} node (like \code{description} in our example).
 \item[\code{type = "function", spec = function(tree) \ldots}] The function
   \code{spec} is called, passing over a tree representation (as
   delivered by \code{xmlInternalTreeParse()} from package \pkg{XML})
   of the read in \acronym{XML} document as first argument (as seen for
-  \code{DateTimeStamp} and \code{ID}). As you notice in our example
+  \code{datetimestamp} and \code{id}). As you notice in our example
   nobody forces us to actually use the passed over tree, instead we
   can do anything we want (e.g., create a unique character vector via
   \code{tempfile()} to have a unique identification string).
 \item[\code{type = "unevaluated", spec = "String"}] the character vector
-  \code{spec} is returned without modification (e.g., \code{Origin} in
+  \code{spec} is returned without modification (e.g., \code{origin} in
   our specification).
 \end{description}
 
