--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,9 @@
+2014-04-20  Ingo Feinerer <feinerer@logic.at>
+
+	* ChangeLog: Not maintained as a separate file anymore. Please consult
+	the tm Subversion log messages (available at
+	https://r-forge.r-project.org/scm/viewvc.php/pkg/?root=tm) instead.
+
 2014-02-25  Ingo Feinerer <feinerer@logic.at>
 
 	* NAMESPACE: Export pGetElem.URISource.
