--- a/pkg/vignettes/tm.Rnw
+++ b/pkg/vignettes/tm.Rnw
@@ -299,10 +299,10 @@ offered by \pkg{tm} as this sometimes comes at the price of performance.
 
 \class{SimpleCorpus} provides a corpus which is optimized for the most common
 usage scenario: importing plain texts from files in a directory or directly
-from a vector in R, preprocessing and transforming the texts, and finally
-exporting them to a term-document matrix. The aim is to boost performance and
-minimize memory pressure. It loads all documents into memory, and is designed
-for medium-sized to large data sets.
+from a vector in \proglang{R}, preprocessing and transforming the texts, and
+finally exporting them to a term-document matrix. The aim is to boost
+performance and minimize memory pressure. It loads all documents into memory,
+and is designed for medium-sized to large data sets.
 
 However, it operates only under the following contraints:
 \begin{itemize}
