Speed up termFreq(), general cleanup
- Avoid parallel::mclapply()
- Use custom .table()
- Use rep.int(), rep_len() and lengths()
- Fix typos
- Shorten overlong lines
- Consistent formatting


git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1445 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -150,7 +150,7 @@
 
 	* R/matrix (termFreq): Allow local option \code{bounds$local} to
 	restrict how often a term may appear in each document (generalizes
-	\code{minDocFreq}). Similarly the local option \code{wordLenghts}
+	\code{minDocFreq}). Similarly the local option \code{wordLengths}
 	for word length bounds (generalizes \code{minWordLength}).
 
 	* R/matrix.R (TermDocumentMatrix.VCorpus): New global option
