--- a/pkg/vignettes/extensions.Rnw
+++ b/pkg/vignettes/extensions.Rnw
@@ -14,7 +14,7 @@
 \begin{document}
 <<Init,echo=FALSE,results=hide>>=
 library("tm")
-library("XML")
+library("xml2")
 @
 \title{Extensions\\How to Handle Custom File Formats}
 \author{Ingo Feinerer}
@@ -144,7 +144,7 @@ meta(corpus[[1]])
 \section*{Custom XML Sources}
 Many modern file formats already come in \acronym{XML} format which
 allows to extract information with any \acronym{XML} conforming
-parser, e.g., as implemented in \proglang{R} by the \pkg{XML}
+parser, e.g., as implemented in \proglang{R} by the \pkg{xml2}
 package.
 
 Now assume we have some custom \acronym{XML} format which we want to
@@ -168,20 +168,19 @@ The \code{XMLSource()} function can now be used to construct a custom
 \acronym{XML} source. It has three arguments:
 \begin{description}
 \item[x] a character giving a uniform resource identifier,
-\item[parser] a function accepting an \acronym{XML} tree (as delivered by
-  \code{xmlTreeParse()} in package \pkg{XML}) as input and returning a
-  list of \acronym{XML} elements (each list element will then be delivered to
-  the reader as such a self-contained block),
+\item[parser] a function accepting an \acronym{XML} document (as delivered by
+  \code{read\_xml()} in package \pkg{xml2}) as input and returning a
+  \acronym{XML} elements/nodes (each element/node will then be
+  delivered to the reader as a self-contained block),
 \item[reader] a reader function capable of turning \acronym{XML}
-  elements as returned by the parser into a subclass of
+  elements/nodes as returned by the parser into a subclass of
   \code{TextDocument}.
 \end{description}
 E.g., a custom source which can cope with our custom \acronym{XML}
 format could be:
 <<mySource,keep.source=TRUE>>=
 mySource <- function(x)
-    XMLSource(x, function(tree) XML::xmlChildren(XML::xmlRoot(tree)),
-              myXMLReader)
+    XMLSource(x, parser = xml2::xml_children, reader = myXMLReader)
 @
 As you notice in this example we also provide a custom reader function
 (\code{myXMLReader}). See the next section for details.
@@ -197,15 +196,15 @@ Let us start with an example which defines a reader function for the
 file format from the previous section:
 <<myXMLReader,keep.source=TRUE>>=
 myXMLReader <- readXML(
-    spec = list(author = list("node", "/document/writer"),
-                content = list("node", "/document/description"),
+    spec = list(author = list("node", "writer"),
+                content = list("node", "description"),
                 datetimestamp = list("function",
                     function(x) as.POSIXlt(Sys.time(), tz = "GMT")),
-                description = list("attribute", "/document/@short"),
-                heading = list("node", "/document/caption"),
+                description = list("node", "@short"),
+                heading = list("node", "caption"),
                 id = list("function", function(x) tempfile()),
                 origin = list("unevaluated", "My private bibliography"),
-                type = list("node", "/document/type")),
+                type = list("node", "type")),
     doc = PlainTextDocument())
 @
 
@@ -223,21 +222,17 @@ Each list entry must consist of two character vectors: the first
 describes the type of the second argument, and the second is the
 specification entry. Valid combinations are:
 \begin{description}
-\item[\code{type = "node", spec = "XPathExpression"}] the XPath expression
+\item[\code{type = "node", spec = "XPathExpression"}] the XPath (1.0) expression
   \code{spec} extracts information out of an \acronym{XML} node (as seen for
-  \code{author}, \code{content}, \code{heading}, and \code{type} in our
-  example specification).
-\item[\code{type = "attribute", spec = "XPathExpression"}] the XPath
-  expression \code{spec} extracts information from an attribute
-  of an \acronym{XML} node (like \code{description} in our example).
-\item[\code{type = "function", spec = function(tree) \ldots}] The function
-  \code{spec} is called, passing over a tree representation (as
-  delivered by \code{xmlInternalTreeParse()} from package \pkg{XML})
-  of the read in \acronym{XML} document as first argument (as seen for
-  \code{datetimestamp} and \code{id}). As you notice in our example
-  nobody forces us to actually use the passed over tree, instead we
-  can do anything we want (e.g., create a unique character vector via
-  \code{tempfile()} to have a unique identification string).
+  \code{author}, \code{content}, \code{description}, \code{heading}, and
+  \code{type} in our example specification).
+\item[\code{type = "function", spec = function(doc) \ldots}] The function
+  \code{spec} is called, passing over the \acronym{XML} document (as
+  delivered by \code{read\_xml()} from package \pkg{xml2})
+  as first argument (as seen for \code{datetimestamp} and \code{id}).
+  As you notice in our example nobody forces us to actually use the passed over
+  document, instead we can do anything we want (e.g., create a unique character
+  vector via \code{tempfile()} to have a unique identification string).
 \item[\code{type = "unevaluated", spec = "String"}] the character vector
   \code{spec} is returned without modification (e.g., \code{origin} in
   our specification).
